typescript/checker/tests/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractUsingAbstractMethod1.ts.stderr
error: NoNewSignature {
    span: Span {
        lo: BytePos(
            184,
        ),
        hi: BytePos(
            185,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractUsingAbstractMethod1.ts:13:13
   |
13 | var a = new B;
   |             ^

error: NoNewSignature {
    span: Span {
        lo: BytePos(
            208,
        ),
        hi: BytePos(
            209,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractUsingAbstractMethod1.ts:16:9
   |
16 | a = new C; // error, cannot instantiate abstract class.
   |         ^

